--- a/mainAdministrador/index.html
+++ b/mainAdministrador/index.html
@@ -10,15 +10,70 @@
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
+    />
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    <aside>
-      <h1><a href=""></a></h1>
-    </aside>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-      crossorigin="anonymous"
-    ></script>
+    <div class="wrapper">
+      <header class="header-mobile">
+        <h1 class="logo">Colocar logo</h1>
+        <button class="open-menu" id="open-menu">
+          <i class="bi bi-x"></i>
+        </button>
+      </header>
+      <aside>
+        <button class="close-menu" id="close-menu">
+          <i class="bi bi-x"></i>
+        </button>
+        <header>
+          <h1 class="logo">Colocar logo</h1>
+        </header>
+        <nav>
+          <ul class="menu">
+            <li>
+              <button id="todos" class="boton-menu boton categoria active">
+                <i class="bi bi-hand-index-thumb-fill"></i>Dashboard
+              </button>
+            </li>
+            <li>
+              <button id="todos" class="boton-menu boton categoria">
+                <i class="bi bi-hand-index-thumb-fill"></i>Ordernes
+              </button>
+            </li>
+            <li>
+              <button id="todos" class="boton-menu boton categoria">
+                <i class="bi bi-hand-index-thumb-fill"></i>Inventario
+              </button>
+            </li>
+            <li>
+              <button id="todos" class="boton-menu boton categoria">
+                <i class="bi bi-hand-index-thumb-fill"></i>Reportes
+              </button>
+            </li>
+            <li>
+              <button id="todos" class="boton-menu boton categoria">
+                <i class="bi bi-hand-index-thumb-fill"></i>Empleados
+              </button>
+            </li>
+          </ul>
+        </nav>
+        <footer>
+          <p class="texto-footer">©LVLUP-GAMER</p>
+        </footer>
+      </aside>
+      <main>
+        <h2 class="titulo-principal" id="titulo-principal">Dashboard</h2>
+        <div id="contenedor-dashboard" class="contenedor-dashboard"></div>
+      </main>
+      <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"
+      ></script>
+    </div>
   </body>
 </html>
