--- a/pagina_Prin/Header.html
+++ b/pagina_Prin/Header.html
@@ -16,45 +16,26 @@
   </head>
   <body>
     <header class="p-3 text-bg-dark">
-      <div class="container">
-        <div
-          class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start"
-        >
-          <a
-            href="/"
-            class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none"
-          >
-            <svg
-              class="bi me-2"
-              width="40"
-              height="32"
-              role="img"
-              aria-label="Bootstrap"
-            >
-              <use xlink:href="#bootstrap"></use>
-            </svg>
-          </a>
-          <ul
-            class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0"
-          >
-            <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
-            <li><a href="#" class="nav-link px-2 text-white">Productos</a></li>
-            <li><a href="#" class="nav-link px-2 text-white">Nosotros</a></li>
-            <li><a href="#" class="nav-link px-2 text-white">Blog</a></li>
-            <li><a href="#" class="nav-link px-2 text-white">Contacto</a></li>
-          </ul>
-          <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-            <a href=""><i class="bi bi-cart4 icon" ></i>c</a>
-          </form>
-          <div class="text-end">
-            
-            <button type="button" class="btn btn-outline-light me-2">
-              Login
-            </button>
-            <button type="button" class="btn btn-warning">Sign-up</button>
-          </div>
-        </div>
+  <div class="container">
+    <div class="d-flex flex-wrap align-items-center justify-content-start">
+      <div><h2 class="me-3">LevelUpGamer</h2></div>
+      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+        <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
+        <li><a href="#" class="nav-link px-2 text-white">Productos</a></li>
+        <li><a href="#" class="nav-link px-2 text-white">Nosotros</a></li>
+        <li><a href="#" class="nav-link px-2 text-white">Blog</a></li>
+        <li><a href="#" class="nav-link px-2 text-white">Contacto</a></li>
+      </ul>
+      <div class="d-flex align-items-center">
+        <button type="button" class="btn btn-outline-light me-2">
+        <i class="bi bi-cart4"></i>
+        </button>
+        <button type="button" class="btn btn-outline-light me-2">Login</button>
+        <button type="button" class="btn btn-warning">Sign-up</button>
       </div>
-    </header>
+    </div>
+  </div>
+</header>
+
   </body>
 </html>
