--- a/mainAdministrador/index.html
+++ b/mainAdministrador/index.html
@@ -22,7 +22,7 @@
       <header class="header-mobile">
         <h1 class="logo">Colocar logo</h1>
         <button class="open-menu" id="open-menu">
-          <i class="bi bi-x"></i>
+          <i class="bi bi-list"></i>
         </button>
       </header>
       <aside>
@@ -67,13 +67,13 @@
       </aside>
       <main>
         <h2 class="titulo-principal" id="titulo-principal">Dashboard</h2>
-        <div id="contenedor-dashboard" class="contenedor-dashboard"></div>
+        <div id="contenedor-dashboard" class="contenedor-dashboard">
+          <!-- Se deberá rellenar con JS -->
+        </div>
       </main>
-      <script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-        crossorigin="anonymous"
-      ></script>
     </div>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="scripts/main.js"></script>
+    <script src="scripts/menu.js"></script>
   </body>
 </html>
