--- a/pagina_Prin/Header.html
+++ b/pagina_Prin/Header.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="Scripts\style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="Scripts\style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,26 +19,33 @@
   </head>
   <body>
     <header class="p-3 text-bg-dark">
-  <div class="container">
-    <div class="d-flex flex-wrap align-items-center justify-content-start">
-      <div><h2 class="me-3">LevelUpGamer</h2></div>
-      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
-        <li><a href="#" class="nav-link px-2 text-white">Productos</a></li>
-        <li><a href="#" class="nav-link px-2 text-white">Nosotros</a></li>
-        <li><a href="#" class="nav-link px-2 text-white">Blog</a></li>
-        <li><a href="#" class="nav-link px-2 text-white">Contacto</a></li>
-      </ul>
-      <div class="d-flex align-items-center">
-        <button type="button" class="btn btn-outline-light me-2">
-        <i class="bi bi-cart4"></i>
-        </button>
-        <button type="button" class="btn btn-outline-light me-2">Login</button>
-        <button type="button" class="btn btn-warning">Sign-up</button>
+      <div class="container">
+        <div class="d-flex flex-wrap align-items-center justify-content-start">
+          <div>
+            <h2 class="me-3">
+              <img src="Img/logo-Photoroom.png" alt="logo" class="logo" />
+            </h2>
+          </div>
+          <ul
+            class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0"
+          >
+            <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
+            <li><a href="#" class="nav-link px-2 text-white">Productos</a></li>
+            <li><a href="#" class="nav-link px-2 text-white">Nosotros</a></li>
+            <li><a href="#" class="nav-link px-2 text-white">Blog</a></li>
+            <li><a href="#" class="nav-link px-2 text-white">Contacto</a></li>
+          </ul>
+          <div class="d-flex align-items-center">
+            <button type="button" class="btn btn-outline-light me-2">
+              <i class="bi bi-cart4"></i>
+            </button>
+            <button type="button" class="btn btn-outline-light me-2">
+              Login
+            </button>
+            <button type="button" class="btn btn-warning">Sign-up</button>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
-</header>
-
+    </header>
   </body>
 </html>
