--- a/pagina_Prin/Footer.html
+++ b/pagina_Prin/Footer.html
@@ -9,87 +9,20 @@
     <div class="container">
       <footer class="py-5">
         <div class="row">
-          <div class="col-6 col-md-2 mb-3">
-            <h5>Section</h5>
-            <ul class="nav flex-column">
-              <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary">Home</a>
-              </li>
-              <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary"
-                  >Features</a
-                >
-              </li>
-              <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary">Pricing</a>
-              </li>
-              <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary">FAQs</a>
-              </li>
-              <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary">About</a>
-              </li>
-            </ul>
-          </div>
-          <div class="col-6 col-md-2 mb-3">
-            <h5>Section</h5>
-            <ul class="nav flex-column">
-              <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary">Home</a>
-              </li>
-              <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary"
-                  >Features</a
-                >
-              </li>
-              <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary">Pricing</a>
-              </li>
-              <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary">FAQs</a>
-              </li>
-              <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary">About</a>
-              </li>
-            </ul>
-          </div>
-          <div class="col-6 col-md-2 mb-3">
-            <h5>Section</h5>
-            <ul class="nav flex-column">
-              <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary">Home</a>
-              </li>
-              <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary"
-                  >Features</a
-                >
-              </li>
-              <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary">Pricing</a>
-              </li>
-              <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary">FAQs</a>
-              </li>
-              <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary">About</a>
-              </li>
-            </ul>
-          </div>
-          <div class="col-md-5 offset-md-1 mb-3">
+          <div class="col-md-5 offset-md-7 mb-3">
             <form>
-              <h5>Subscribe to our newsletter</h5>
-              <p>Monthly digest of what's new and exciting from us.</p>
+              <h5>Subscribete para recibir las mejores ofertas</h5>
+              <p>Recibe las mejores ofertas en tu correo</p>
               <div class="d-flex flex-column flex-sm-row w-100 gap-2">
                 <label for="newsletter1" class="visually-hidden"
-                  >Email address</label
-                >
+                  >Correo electronico</label>
                 <input
                   id="newsletter1"
                   type="email"
                   class="form-control"
-                  placeholder="Email address"
+                  placeholder="Correo electronico"
                 />
-                <button class="btn btn-primary" type="button">Subscribe</button>
+                <button class="btn btn-primary" type="button">Subscribirse</button>
               </div>
             </form>
           </div>
@@ -97,19 +30,17 @@
         <div
           class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top"
         >
-          <p>© 2025 Company, Inc. All rights reserved.</p>
+          <p>© LevelUpGames, Inc. All rights reserved.</p>
           <ul class="list-unstyled d-flex">
             <li class="ms-3">
               <a class="link-body-emphasis" href="#" aria-label="Instagram"
                 ><svg class="bi" width="24" height="24">
-                  <use xlink:href="#instagram"></use></svg
-              ></a>
+                  <use xlink:href="#instagram"></use></svg></a>
             </li>
             <li class="ms-3">
               <a class="link-body-emphasis" href="#" aria-label="Facebook"
                 ><svg class="bi" width="24" height="24" aria-hidden="true">
-                  <use xlink:href="#facebook"></use></svg
-              ></a>
+                  <use xlink:href="#facebook"></use></svg></a>
             </li>
           </ul>
         </div>
