--- a/pagina_Prin/Header.html
+++ b/pagina_Prin/Header.html
@@ -5,16 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="Scripts\style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"rel="stylesheet"integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"crossorigin="anonymous"/>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   </head>
   <body>
@@ -23,16 +15,16 @@
         <div class="d-flex flex-wrap align-items-center justify-content-start">
           <div>
             <h2 class="me-3">
-              <img src="Img/logo-Photoroom.png" alt="logo" class="logo" />
+              <img src="Img/logo-Photoroom.png" alt="logo" class="logo" width="100"/>
             </h2>
           </div>
           <ul
             class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0"
           >
-            <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
-            <li><a href="#" class="nav-link px-2 text-white">Productos</a></li>
+            <li><a href="INDEX.HTML" class="nav-link px-2 text-secondary">Home</a></li>
+            <li><a href="Productos.html" class="nav-link px-2 text-white">Productos</a></li>
             <li><a href="#" class="nav-link px-2 text-white">Nosotros</a></li>
-            <li><a href="#" class="nav-link px-2 text-white">Blog</a></li>
+            <li><a href="blog.html" class="nav-link px-2 text-white">Blog</a></li>
             <li><a href="#" class="nav-link px-2 text-white">Contacto</a></li>
           </ul>
           <div class="d-flex align-items-center">
