07/09/25 detalle producto implementadon y productos.js mostar productos dinamico

--- a/pagina_Prin/Header.html
+++ b/pagina_Prin/Header.html
@@ -10,17 +10,16 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   </head>
   <body>
-    <header class="p-3 text-bg-dark">
-      <div class="container">
-        <div class="d-flex flex-wrap align-items-center justify-content-start">
+    <header class="p-0 text-bg-dark">
+      <div class="container-fluid">
+        <div class="d-flex flex-wrap align-items-center  justify-content-center justify-content-lg-start py-2">
           <div>
             <h2 class="me-3">
-              <img src="Img/logo-Photoroom.png" alt="logo" class="logo" width="100"/>
+              <img src="Img/logo-Photoroom.png" alt="logo" class="logo" />
             </h2>
           </div>
           <ul
-            class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0"
-          >
+            class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
             <li><a href="INDEX.HTML" class="nav-link px-2 text-secondary">Home</a></li>
             <li><a href="Productos.html" class="nav-link px-2 text-white">Productos</a></li>
             <li><a href="#" class="nav-link px-2 text-white">Nosotros</a></li>
