Creacion nosotros/contacto
tuve que hacerlo acá para poder copiar el codigo del header y todo eso

--- a/pagina_Prin/Header.html
+++ b/pagina_Prin/Header.html
@@ -22,9 +22,9 @@
             class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
             <li><a href="INDEX.HTML" class="nav-link px-2 text-secondary">Home</a></li>
             <li><a href="Productos.html" class="nav-link px-2 text-white">Productos</a></li>
-            <li><a href="#" class="nav-link px-2 text-white">Nosotros</a></li>
+            <li><a href="Nosotros.html" class="nav-link px-2 text-white">Nosotros</a></li>
             <li><a href="blog.html" class="nav-link px-2 text-white">Blog</a></li>
-            <li><a href="#" class="nav-link px-2 text-white">Contacto</a></li>
+            <li><a href="Nosotros.html#seccion-contacto-directo" class="nav-link px-2 text-white">Contacto</a></li>
           </ul>
           <div class="d-flex align-items-center">
             <button type="button" class="btn btn-outline-light me-2">
