--- a/pagina_Prin/Header.html
+++ b/pagina_Prin/Header.html
@@ -27,13 +27,15 @@
             <li><a href="Nosotros.html#seccion-contacto-directo" class="nav-link px-2 text-white">Contacto</a></li>
           </ul>
           <div class="d-flex align-items-center">
-            <button type="button" class="btn btn-outline-light me-2">
-              <i class="bi bi-cart4"></i>
-            </button>
-            <button type="button" class="btn btn-outline-light me-2">
-              Login
-            </button>
-            <button type="button" class="btn btn-warning">Sign-up</button>
+              <a href="#" class="btn btn-outline-light me-2">
+                <i class="bi bi-cart4"></i>
+              </a>
+              <a href="LoginUsuario.html" class="btn btn-outline-light me-2">
+                  Login
+              </a>
+              <a href="Registro.html" class="btn btn-warning">
+                  Sign-up
+              </a>
           </div>
         </div>
       </div>
