--- a/pagina_Prin/Header.html
+++ b/pagina_Prin/Header.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="Scripts\style.css" />
+    <link rel="stylesheet" href="style/style.css" />
     <link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"rel="stylesheet"integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"crossorigin="anonymous"/>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
@@ -27,7 +27,7 @@
             <li><a href="Nosotros.html#seccion-contacto-directo" class="nav-link px-2 text-white">Contacto</a></li>
           </ul>
           <div class="d-flex align-items-center">
-              <a href="#" class="btn btn-outline-light me-2">
+              <a href="carrito.html" class="btn btn-outline-light me-2">
                 <i class="bi bi-cart4"></i>
               </a>
               <a href="LoginUsuario.html" class="btn btn-outline-light me-2">
