--- a/pagina_Prin/INDEX.HTML
+++ b/pagina_Prin/INDEX.HTML
@@ -14,6 +14,29 @@
 <body>
   <div class="menuContainer"></div>
 
+  <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
+      <div
+        id="notificacionToast"
+        class="toast"
+        role="alert"
+        aria-live="assertive"
+        aria-atomic="true"
+      >
+        <div class="toast-header">
+          <strong class="me-auto">🛒 Carrito de Compras</strong>
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="toast"
+            aria-label="Close"
+          ></button>
+        </div>
+        <div class="toast-body" id="toast-body-mensaje">
+          ¡Producto añadido correctamente!
+        </div>
+      </div>
+    </div>
+
   <div class="container col-xxl-8 px-4 py-5" id="">
     <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
       <div class="col-10 col-sm-8 col-lg-6">
@@ -28,7 +51,7 @@
           popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive
           prebuilt components, and powerful JavaScript plugins.</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-          <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">
+          <button type="button" class="btn btn-primary btn-lg px-4 me-md-2" id = "btn-home-productos">
             Productos
           </button>
         </div>
@@ -53,6 +76,11 @@
       $(".footerContainer").load("Footer.html");
     });
   </script>
+  <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   <script src="Scripts\Productos.js"></script>
 </body>
 
