--- a/mainAdministrador/administrador.html
+++ b/mainAdministrador/administrador.html
@@ -65,8 +65,11 @@
               <thead>
                 <tr>
                   <th>ID</th>
+                  <th>Run</th>
                   <th>Nombre</th>
+                  <th>Apellidos</th>
                   <th>Email</th>
+                  <th>Direccion</th>
                   <th>Rol</th>
                 </tr>
               </thead>
@@ -92,6 +95,7 @@
                 <tr>
                   <th>ID</th>
                   <th>Producto</th>
+                  <th>Descripcion</th>
                   <th>Precio</th>
                   <th>Stock</th>
                 </tr>
@@ -116,6 +120,9 @@
         <input type="text" id="field1" placeholder="" />
         <input type="text" id="field2" placeholder="" />
         <input type="text" id="field3" placeholder="" />
+        <input type="text" id="field4" placeholder="" />
+        <input type="text" id="field5" placeholder="" />
+        <input type="text" id="field6" placeholder="" />
         <button onclick="saveItem()">Guardar</button>
         <button onclick="closeModal()">Cancelar</button>
       </div>
