--- a/pagina_Prin/DetalleProducto.html
+++ b/pagina_Prin/DetalleProducto.html
@@ -184,10 +184,9 @@
           .forEach((img) => img.classList.remove("active"));
         el.classList.add("active");
       }
+      
       $(document).ready(function () {
         $(".menuContainer").load("Header.html");
-      });
-      $(document).ready(function () {
         $(".footerContainer").load("Footer.html");
       });
     </script>
@@ -200,5 +199,6 @@
     ></script>
 
     <script src="Scripts/Productos.js"></script>
+    <script src="Scripts/administrador.js"></script>
   </body>
 </html>
