--- a/pagina_Prin/Nosotros.html
+++ b/pagina_Prin/Nosotros.html
@@ -69,10 +69,9 @@
     <script>
       $(document).ready(function () {
         $(".menuContainer").load("Header.html");
-      });
-      $(document).ready(function () {
         $(".footerContainer").load("Footer.html");
       });
     </script>
+    <script src="Scripts/administrador.js"></script>
   </body>
 </html>
