--- a/pagina_Prin/Productos.html
+++ b/pagina_Prin/Productos.html
@@ -56,9 +56,9 @@
     <div class="footerContainer"></div>
     <script>
       $(document).ready(function () {
-        $(".menuContainer").load("Header.html");
-      });
-      $(document).ready(function () {
+        $(".menuContainer").load("Header.html", function () {
+          actualizarHeader();
+        });
         $(".footerContainer").load("Footer.html");
       });
     </script>
@@ -71,5 +71,6 @@
     ></script>
 
     <script src="Scripts/Productos.js"></script>
+    <script src="Scripts/administrador.js"></script>
   </body>
 </html>
