--- a/pagina_Prin/carrito.html
+++ b/pagina_Prin/carrito.html
@@ -108,5 +108,6 @@
 
     <script src="Scripts/Productos.js"></script>
     <script src="Scripts/Carrito.js"></script>
+    <script src="Scripts/administrador.js"></script>
   </body>
 </html>
