--- a/pagina_Prin/Administrador.html
+++ b/pagina_Prin/Administrador.html
@@ -22,7 +22,7 @@
       <div class="header">
         <span class="menu-btn" onclick="toggleSidebar()">☰</span>
         <h3>Bienvenido, Admin</h3>
-        <button class="logout">Cerrar sesión</button>
+        <button class="logout" onclick="cerrarSesion()">Cerrar sesión</button>
       </div>
 
       <div class="content">
