--- a/pagina_Prin/Productos.html
+++ b/pagina_Prin/Productos.html
@@ -50,6 +50,9 @@
           class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3"
           id="contenedor-productos"
         ></div>
+        <nav>
+          <ul class = "pagination justify-content-center" id="paginacion-productos"></ul>
+        </nav>
       </div>
     </div>
 
